// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <GenericPluginDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "genericPluginsPanel": false,
        }
      }
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="genericPluginsPanel"
      title="Generic Plugin Item"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Type
                    </label>
                    <div
                      className="form-control-static"
                    />
                  </div>
                </div>
              </div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Note
                    </label>
                    <div
                      className="form-control-static"
                    />
                  </div>
                </div>
              </div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Author
                    </label>
                    <div
                      className="form-control-static"
                    />
                  </div>
                </div>
                <div
                  className="col-expand-right"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Date
                    </label>
                    <div
                      className="form-control-static"
                    >
                      03-Oct-2017
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Source
                    </label>
                    <div
                      className="form-control-static"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <GenericPluginDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "genericPluginsPanel": true,
        }
      }
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="genericPluginsPanel"
      title="Edit Generic Plugin Item"
    >
      <ReduxForm
        detail={
          Object {
            "author": "bob.smith@gmail.com",
            "dateCreated": 1510224834000,
            "note": "11",
            "source": "ethercis",
            "sourceId": "7ae34463-0770-4a36-bbde-4869bb6a0f05",
            "type": "11",
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <GenericPluginDetail /> should renders with props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "genericPluginsPanel": false,
        }
      }
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="genericPluginsPanel"
      title="Generic Plugin Item"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Type
                    </label>
                    <div
                      className="form-control-static"
                    >
                      11
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Note
                    </label>
                    <div
                      className="form-control-static"
                    >
                      11
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Author
                    </label>
                    <div
                      className="form-control-static"
                    >
                      bob.smith@gmail.com
                    </div>
                  </div>
                </div>
                <div
                  className="col-expand-right"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Date
                    </label>
                    <div
                      className="form-control-static"
                    >
                      09-Nov-2017
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Source
                    </label>
                    <div
                      className="form-control-static"
                    >
                      ethercis
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
